--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_reload">Reload</string>
+    <string name="user_dictionary_is_empty">User dictionary is empty.</string>
 
 </resources>
