--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,14 @@
     <string name="action_reload">Reload</string>
     <string name="user_dictionary_is_empty">User dictionary is empty.</string>
     <string name="title_activity_students">StudentsActivity</string>
+    <string name="hint_input_academic_year">A.y.</string>
+    <string name="hint_input_age">Age</string>
+    <string name="hint_input_name">Name</string>
+    <string name="button_add_student">Add</string>
+    <string name="input_student_name_cant_be_empty">Student name can\\'t be empty</string>
+    <string name="invalid_input_student_age">Invalid age</string>
+    <string name="negative_input_student_age">Student age can not be negative</string>
+    <string name="invalid_input_student_academic_year">Invalid academic year</string>
+    <string name="input_student_academic_year_starts_at_first_year">Academic years starts at 1</string>
 
 </resources>
